# Butler

./: .env.example  .gitignore  AGENTS.md  BACKEND_CODEMAP_REPORT.md  BUTLER_MEMORY_ARCHITECTURE_DEEP_DIVE.md  CODE_FLOW_MAP.md  SPAGHETTI_AUDIT.md  bis-v2-production-architecture-dfe18c.md  docker-compose.yml  mandatory_rules.txt  parse_rules.py  premble.md  pyrightconfig.json  test_chat.py
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  audit_and_fix.py  check_db.py  debug_workflows.py  hermes_constants.py  main.py  pyproject.toml  requirements.txt
backend/.github/workflows/: safety-check.yml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_memory_service_schema.py  3ab515fb150ba_add_tool_execution_real_columns.py  8b5d0ea168c8_add_orchestration_tables.py
backend/api/: __init__.py  streaming.py
backend/api/gateway/: hardening.py
backend/api/routes/: acp.py  admin.py  audio.py  auth.py  canvas.py  communication.py  cron.py  device.py  gateway.py  internal_control.py  mcp.py  meetings.py  memory.py  mercury.py  ml.py  ml_providers.py  orchestrator.py  orchestrator.py.bak  realtime.py  research.py  search.py  security.py  tools.py  vision.py  voice_gateway.py
backend/api/schemas/: auth.py  common.py  communication.py  components.py  mercury.py  ml_providers.py
backend/butler_runtime/: HERMES_MERGE_MAP.md  MIGRATION_GUIDE.md  MULTI_TENANT_IMPLEMENTATION_PLAN.md
backend/butler_runtime/agent/: __init__.py  budget.py  callbacks.py  loop.py  message_builder.py  tool_calling.py
backend/butler_runtime/channels/: __init__.py  adapter.py  platform_registry.py
backend/butler_runtime/graph/: __init__.py  compiler.py  state.py
backend/butler_runtime/hermes/: __init__.py
backend/butler_runtime/langchain/: __init__.py  agent.py  tools.py
backend/butler_runtime/skills/: __init__.py  manager.py  registry.py
backend/butler_runtime/tests/: __init__.py  test_unified_runtime.py
backend/butler_runtime/tools/: __init__.py  registry.py
backend/cli/: butler_cli.py
backend/compliance/: audit.py  pii.py
backend/core/: __init__.py  base_config.py  base_service.py  circuit_breaker.py  deps.py  doctor.py  envelope.py  errors.py  health.py  health_agent.py  idempotency.py  locks.py  logging.py  metrics.py  middleware.py  mission_log.py  network.py  observability.py  resilient_client.py  retry_budget.py  state_sync.py  tenant_aware_logger.py  tracing.py
backend/deployment/: integrations_catalog.py
backend/docs/: FEATURE_PARITY_HERMES_LANGGRAPH.md  OPERATIONAL_HANDOFF.md  PRODUCTION_READINESS.md  PROJECT_COMPLETION_REPORT.md  SYSTEM_OVERVIEW.md  butler_runtime_migration.md  butler_runtime_migration_status.md  chaos_engineering.md  langchain_cleanup_plan.md
backend/docs/architecture/: boundary-sealing.md  butler-full-system-map.md  ci-allowlist.md  (+14 more)
backend/domain/: base.py  contracts.py
backend/futureagi/: __init__.py
backend/infrastructure/: async_optimizer.py  cache.py  config.py  database.py  partitioning.py  redis_abstractions.py  redpanda_client.py  s3_client.py
backend/integrations/: __init__.py
backend/langchain/: HERMES_INTEGRATION_SUMMARY.md  __init__.py  agent.py  auth.py  backend.py  butler_direct_tools.py  butler_file_operations.py  butler_file_tools.py  butler_time_tools.py  butler_url_safety.py  butler_web_tools.py  compliance.py  deployment.py  evaluator.py  hermes_errors.py  hermes_governance.py  hermes_inspection_report.md  hermes_loader.py  hermes_registry.py  hermes_runtime.py  hermes_schemas.py  hermes_tools.py  integrations_catalog.py  interrupt.py  langgraph_example.py  memory.py  models.py  multi_agent.py  observability.py  prompts.py  resilience.py  retrievers.py  runtime.py  server.py  streaming.py  structured_output.py  subgraph.py  test_hermes_comprehensive.py  test_hermes_integration.py  time_travel.py  (+2 more)
backend/migrations/: 001_add_tenant_columns.sql  002_tenant_rls_policies.sql
backend/observability/: ab_testing.py  model_monitoring.py  otel.py
backend/scratch/: diag_executor.py  smoke_test.py  test_det_backend.py  verify_blender.py  verify_gateway.py  verify_intelligence.py  verify_orchestration.py  verify_system.py
backend/scripts/: verify_system.py
backend/tests/: benchmark_gateway.py  test_approval_durability.py  test_canonical_envelope_contracts.py  test_canonical_runtime.py  test_chaos_load.py  test_context_compression.py  test_core_base_config.py  test_core_deps_memory.py  test_core_logging_tier.py  test_core_middleware.py  test_db_migrations.py  test_final_response_composer.py  test_flight_3_personalization.py  test_flight_4_workflow.py  test_gateway_chat_route.py  test_hermes_agent_backend.py  test_hermes_tool_registrations_regression.py  test_interrupt.py  test_langchain_boundary.py  test_langchain_tools.py  test_memory_extraction_refined.py  test_memory_isolation.py  test_memory_retrieval.py  test_memory_service_store.py  test_ml_provider_health.py  test_namespace_isolation.py  test_observability_metrics_compat.py  test_operation_router.py  test_orchestrator_approval_route.py  test_orchestrator_deterministic_dag.py  test_orchestrator_deterministic_executor_rendering.py  test_orchestrator_langgraph_runtime.py  test_orchestrator_planner_fallback.py  test_orchestrator_service_error_path.py  test_phase10_health.py  test_phase11_hermes_integration.py  test_phase12_voice_gateway.py  test_phase1_sovereignty.py  test_phase3_session_stream.py  test_phase4_memory.py  (+23 more)
backend/tools/: __init__.py  ansi_strip.py  approval.py  binary_extensions.py  browser_camofox_state.py  browser_supervisor.py  budget_config.py  checkpoint_manager.py  credential_files.py  debug_helpers.py  env_passthrough.py  file_operations.py  fuzzy_match.py  interrupt.py  managed_tool_gateway.py  mcp_oauth.py  mcp_oauth_manager.py  neutts_synth.py  openrouter_client.py  osv_check.py  patch_parser.py  path_security.py  registry.py  schema_sanitizer.py  skills_guard.py  skills_hub.py  terminal_tool.py  tool_backend_helpers.py  tool_output_limits.py  tool_result_storage.py  url_safety.py  website_policy.py  xai_http.py
(+853 files in other folders)
