[project]
name = "butler-backend"
version = "0.1.0"
description = "Butler AI - Personal AI system backend"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Butler Team", email = "team@butler.lasmoid.ai" }
]

dependencies = [
    # Core web
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",

    # Auth & security
    "pyjwt[crypto]>=2.8.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
    "webauthn>=2.2.0",
    "authlib>=1.3.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.5",

    # Cache / async
    "redis>=5.0.0",
    "apscheduler>=3.10.4",

    # Observability
    "structlog>=24.1.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-redis>=0.45b0",
    "prometheus-client>=0.25.0",

    # Search / extraction
    "httpx>=0.27.0",
    "trafilatura>=1.9.0",
    "beautifulsoup4>=4.12.0",
    "ddgs>=9.0.0",
    "jsonschema>=4.21.0",

    # Utilities
    "typing-extensions>=4.9.0",
    "websockets>=16.0",
    "tenacity>=8.2.0",
    "psutil>=7.2.2",

    # Core provider SDKs actually used broadly
    "openai>=1.12.0",
    "neo4j>=5.14.0",
    "qdrant-client>=1.7.0",

    # LangChain / LangGraph agent runtime
    "langchain>=0.3.20",
    "langgraph>=0.2.75",
    "langchain-mcp-adapters>=0.1.6",
    "langgraph-checkpoint-postgres>=2.0.18",
    "langsmith>=0.3.0",
]

[project.optional-dependencies]
agentic = [
    # Moved to main dependencies for LangGraph agent runtime
]

# Advanced LangChain middleware (compact-middleware, collapse, routing, etc.)
advanced_middleware = [
    "compact-middleware>=0.1.1",
    "langchain-collapse>=0.1.1",
    "langchain-task-steering>=0.1.6",
    "advisor-middleware>=0.1.1",
    "langchain-router>=0.1.4",
]

ml = [
    "numpy>=2.4.4",
    "sentence-transformers>=5.4.1",
    "onnxruntime>=1.17.0",
    "faiss-cpu>=1.7.4",
]

audio = [
    "deepgram-sdk>=3.0.0",
    "soundfile>=0.12.1",
    "ffmpeg-python>=0.2.0",
    "noisereduce>=3.0.0",
    "pyacoustid>=1.3.0",
]

google = [
    "google-api-python-client>=2.120.0",
    "google-auth-oauthlib>=1.2.0",
    "youtube-transcript-api>=0.6.0",
]

postgres = [
    "psycopg2-binary>=2.9.9",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "pyright>=1.1.0",
    "httpx>=0.27.0",
    "fakeredis>=2.21.0",
    "factory-boy>=3.3.0",
]

[project.scripts]
butler-server = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "A", "PIE", "RSE", "RET", "SIM", "T20"]
ignore = [
    "E501",
    "N805",
    "A002",
    "B008",  # FastAPI Depends() default-argument pattern is intentional
    "B904",  # raise-without-from: acceptable in many contexts
    "E402",  # module-import-not-at-top: allowed for late binding in core/deps.py
    "N806",  # non-lowercase var in function: allowed for DTO/SDK compatibility
    "N815",  # mixed-case in class scope: allowed for external API field names
    "N818",  # error-suffix: naming convention choice
    "B007",  # unused loop control var: not worth manual fixing
    "SIM102", "SIM105", "SIM108", "SIM117",  # style-only refactors
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = [
    "api",
    "core",
    "domain",
    "infrastructure",
    "integrations",
    "services",
]
